--- a/app/src/main/res/layout/activity_car_reg.xml
+++ b/app/src/main/res/layout/activity_car_reg.xml
@@ -216,6 +216,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/red"
+                        android:checked="true"
                         android:text="4 Seat"/>
                     <RadioButton
                         android:layout_width="wrap_content"
