--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -36,6 +36,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/nameHomeFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
@@ -56,6 +57,7 @@
                     android:drawablePadding="8dp"
                     android:text="Mobile: "/>
                 <TextView
+                    android:id="@+id/phoneNum"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="8dp"
@@ -73,10 +75,11 @@
                     android:drawableLeft="@drawable/driver_license_icon"
                     android:text="License: "/>
                 <TextView
+                    android:id="@+id/licame"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="8dp"
-                    android:text="xxksjd2232xz44"/>
+                    android:text=""/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -93,6 +96,7 @@
                     android:textSize="18sp"
                     android:text="Car Model: "/>
                 <TextView
+                    android:id="@+id/carModelName"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="8dp"
@@ -142,6 +146,7 @@
                         android:text="Rides"
                         android:textSize="14sp"/>
                     <TextView
+                        android:id="@+id/totalRide"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="150"
@@ -216,6 +221,7 @@
                     android:layout_marginBottom="8dp"
                     android:orientation="horizontal">
                     <TextView
+                        android:id="@+id/rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
@@ -295,6 +301,7 @@
                     android:textColor="#ccffffff"
                     android:text="Trip List"/>
                 <TextView
+                    android:id="@+id/completedTrioNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="#fff"
